Add claim chunk limits and rank API